fix #38: swago v1.1 -> v1.4
