# docs/swagger/swagger.yaml
@@ -1,3 +1,15 @@
+basePath: '{{.BasePath}}'
+definitions:
+  app.Response:
+    properties:
+      code:
+        type: integer
+      data:
+        type: object
+      msg:
+        type: string
+    type: object
+host: '{{.Host}}'
 info:
   contact: {}
   description: An example of gin
@@ -12,124 +24,181 @@ paths:
     get:
       parameters:
       - description: TagID
-        in: query
+        in: body
         name: tag_id
-        type: integer
+        schema:
+          type: object
       - description: State
-        in: query
+        in: body
         name: state
-        type: integer
+        schema:
+          type: object
       - description: CreatedBy
-        in: query
+        in: body
         name: created_by
-        type: integer
+        schema:
+          type: object
       produces:
       - application/json
       responses:
         "200":
-          description: '{"code":200,"data":[{"id":3,"created_on":1516937037,"modified_on":0,"tag_id":11,"tag":{"id":11,"created_on":1516851591,"modified_on":0,"name":"312321","created_by":"4555","modified_by":"","state":1},"content":"5555","created_by":"2412","modified_by":"","state":1}],"msg":"ok"}'
+          description: OK
           schema:
-            type: string
-      summary: 获取多个文章
+            $ref: '#/definitions/app.Response'
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+            type: object
+      summary: Get multiple articles
     post:
       parameters:
       - description: TagID
-        in: query
+        in: body
         name: tag_id
         required: true
-        type: integer
+        schema:
+          type: object
       - description: Title
-        in: query
+        in: body
         name: title
         required: true
-        type: string
+        schema:
+          type: object
       - description: Desc
-        in: query
+        in: body
         name: desc
         required: true
-        type: string
+        schema:
+          type: object
       - description: Content
-        in: query
+        in: body
         name: content
         required: true
-        type: string
+        schema:
+          type: object
       - description: CreatedBy
-        in: query
+        in: body
         name: created_by
         required: true
-        type: string
+        schema:
+          type: object
       - description: State
-        in: query
+        in: body
         name: state
         required: true
-        type: integer
+        schema:
+          type: object
       produces:
       - application/json
       responses:
         "200":
-          description: '{"code":200,"data":{},"msg":"ok"}'
+          description: OK
           schema:
-            type: string
-      summary: 新增文章
+            $ref: '#/definitions/app.Response'
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+            type: object
+      summary: Add article
   /api/v1/articles/{id}:
     delete:
       parameters:
-      - {}
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: '{"code":400,"data":{},"msg":"请求参数错误"}'
-          schema:
-            type: string
-      summary: 删除文章
-    get:
-      parameters:
-      - {}
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: '{"code":200,"data":{"id":3,"created_on":1516937037,"modified_on":0,"tag_id":11,"tag":{"id":11,"created_on":1516851591,"modified_on":0,"name":"312321","created_by":"4555","modified_by":"","state":1},"content":"5555","created_by":"2412","modified_by":"","state":1},"msg":"ok"}'
-          schema:
-            type: string
-      summary: 获取单个文章
-    put:
-      parameters:
-      - {}
-      - description: TagID
-        in: query
-        name: tag_id
-        type: string
-      - description: Title
-        in: query
-        name: title
-        type: string
-      - description: Desc
-        in: query
-        name: desc
-        type: string
-      - description: Content
-        in: query
-        name: content
-        type: string
-      - description: ModifiedBy
-        in: query
-        name: modified_by
+      - description: ID
+        in: path
+        name: id
         required: true
-        type: string
-      - description: State
-        in: query
-        name: state
         type: integer
       produces:
       - application/json
       responses:
         "200":
-          description: '{"code":400,"data":{},"msg":"请求参数错误"}'
+          description: OK
           schema:
-            type: string
-      summary: 修改文章
+            $ref: '#/definitions/app.Response'
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+            type: object
+      summary: Delete article
+    get:
+      parameters:
+      - description: ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/app.Response'
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+            type: object
+      summary: Get a single article
+    put:
+      parameters:
+      - description: ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: TagID
+        in: body
+        name: tag_id
+        schema:
+          type: object
+      - description: Title
+        in: body
+        name: title
+        schema:
+          type: object
+      - description: Desc
+        in: body
+        name: desc
+        schema:
+          type: object
+      - description: Content
+        in: body
+        name: content
+        schema:
+          type: object
+      - description: ModifiedBy
+        in: body
+        name: modified_by
+        required: true
+        schema:
+          type: object
+      - description: State
+        in: body
+        name: state
+        schema:
+          type: object
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/app.Response'
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+            type: object
+      summary: Update article
   /api/v1/tags:
     get:
       parameters:
@@ -145,68 +214,156 @@ paths:
       - application/json
       responses:
         "200":
-          description: '{"code":200,"data":{"lists":[{"id":3,"created_on":1516849721,"modified_on":0,"name":"3333","created_by":"4555","modified_by":"","state":0}],"total":29},"msg":"ok"}'
+          description: OK
           schema:
-            type: string
-      summary: 获取多个文章标签
+            $ref: '#/definitions/app.Response'
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+            type: object
+      summary: Get multiple article tags
     post:
       parameters:
       - description: Name
-        in: query
+        in: body
         name: name
         required: true
-        type: string
+        schema:
+          type: object
       - description: State
-        in: query
+        in: body
         name: state
-        type: integer
+        schema:
+          type: object
       - description: CreatedBy
-        in: query
+        in: body
         name: created_by
-        type: integer
+        schema:
+          type: object
       produces:
       - application/json
       responses:
         "200":
-          description: '{"code":200,"data":{},"msg":"ok"}'
+          description: OK
           schema:
-            type: string
-      summary: 新增文章标签
+            $ref: '#/definitions/app.Response'
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+            type: object
+      summary: Add article tag
   /api/v1/tags/{id}:
     delete:
       parameters:
-      - {}
+      - description: ID
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
         "200":
-          description: '{"code":200,"data":{},"msg":"ok"}'
+          description: OK
           schema:
-            type: string
-      summary: 删除文章标签
+            $ref: '#/definitions/app.Response'
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+            type: object
+      summary: Delete article tag
     put:
       parameters:
-      - {}
       - description: ID
-        in: query
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: ID
+        in: body
         name: name
         required: true
-        type: string
+        schema:
+          type: object
       - description: State
-        in: query
+        in: body
         name: state
-        type: integer
+        schema:
+          type: object
       - description: ModifiedBy
-        in: query
+        in: body
         name: modified_by
         required: true
-        type: string
+        schema:
+          type: object
       produces:
       - application/json
       responses:
         "200":
-          description: '{"code":200,"data":{},"msg":"ok"}'
+          description: OK
           schema:
-            type: string
-      summary: 修改文章标签
+            $ref: '#/definitions/app.Response'
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+            type: object
+      summary: Update article tag
+  /api/v1/tags/export:
+    post:
+      parameters:
+      - description: Name
+        in: body
+        name: name
+        schema:
+          type: object
+      - description: State
+        in: body
+        name: state
+        schema:
+          type: object
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/app.Response'
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+            type: object
+      summary: Export article tag
+  /api/v1/tags/import:
+    post:
+      parameters:
+      - description: Excel File
+        in: body
+        name: file
+        required: true
+        schema:
+          type: object
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/app.Response'
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+            type: object
+      summary: Import article tag
 swagger: "2.0"
